// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareSessionButton: enabled states > renders the Share button when no session is active 1`] = `
<button
  aria-label="Share session"
  class="rounded p-1.5 transition-colors focus-visible:ring-2 focus-visible:ring-neutral-400 text-neutral-600 hover:bg-neutral-100 dark:text-neutral-400 dark:hover:bg-neutral-800"
  title="Share session"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-share2 lucide-share-2"
    fill="none"
    height="16"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="18"
      cy="5"
      r="3"
    />
    <circle
      cx="6"
      cy="12"
      r="3"
    />
    <circle
      cx="18"
      cy="19"
      r="3"
    />
    <line
      x1="8.59"
      x2="15.42"
      y1="13.51"
      y2="17.49"
    />
    <line
      x1="15.41"
      x2="8.59"
      y1="6.51"
      y2="10.49"
    />
  </svg>
</button>
`;

exports[`ShareSessionButton: enabled states > renders the Sharing indicator when a session is active 1`] = `
<button
  aria-label="Sharing session"
  class="rounded p-1.5 transition-colors focus-visible:ring-2 focus-visible:ring-neutral-400 bg-emerald-100 text-emerald-700 hover:bg-emerald-200 dark:bg-emerald-900/40 dark:text-emerald-300 dark:hover:bg-emerald-900/60"
  title="Sharing session"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-share2 lucide-share-2"
    fill="none"
    height="16"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="18"
      cy="5"
      r="3"
    />
    <circle
      cx="6"
      cy="12"
      r="3"
    />
    <circle
      cx="18"
      cy="19"
      r="3"
    />
    <line
      x1="8.59"
      x2="15.42"
      y1="13.51"
      y2="17.49"
    />
    <line
      x1="15.41"
      x2="8.59"
      y1="6.51"
      y2="10.49"
    />
  </svg>
</button>
`;

exports[`ShareSessionButton: gating regression net > renders nothing when NEXT_PUBLIC_COLLAB_URL is unset 1`] = `null`;
